# ai_companion

./: .gitignore  README.md
companion_firmware/: CMakeLists.txt  HOME_SETUP.md  README.md  partitions.csv  sdkconfig.defaults
companion_firmware/main/: CMakeLists.txt  Kconfig.projbuild  board_audio.h  companion_main.cpp  eye_display.cpp  eye_display.h  eye_neutral_rgb565.h  server_client.cpp  server_client.h  wifi_manager.cpp  wifi_manager.h
docs/: decisions.md  dingtalk_bot_design.md
eye_assets/: build_eye_gif.py
eye_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
eye_demo/main/: CMakeLists.txt  anime_left_eye_rgb565.h  anime_right_eye_rgb565.h  eye_demo_main.c
eye_demo/tools/: png_to_rgb565.py  prepare_dual_eyes.py  prepare_rotational_eye.py
firmware/audio_bringup/: CMakeLists.txt
firmware/audio_bringup/main/: bsp_pins.h  main.c
hello_world/: CMakeLists.txt  sdkconfig.defaults
hello_world/main/: CMakeLists.txt  hello_world_main.c
repeater_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
repeater_demo/main/: CMakeLists.txt  Kconfig.projbuild  board_audio.cpp  idf_component.yml  repeater_main.cpp  wifi_manager.cpp  wifi_manager.h
